# caseware-procurement-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: EVIDENCE.txt  claude_desktop_config.example.json  technical-overview.html  technical-overview.md
procurement_kb/: __init__.py  config.py  db.py  models.py
procurement_kb/pipeline/: cache.py  embed.py  extract_contract.py  extract_image.py  extract_pdf.py  run.py
procurement_kb/server/: mcp_server.py  queries.py
scripts/: mcp_client_test.py  seed_image_cache.py  smoke_test.py
