[project]
name = "caseware-procurement-mcp"
version = "0.1.0"
description = "Local MCP server + data pipeline over a heterogeneous procurement knowledge base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "numpy>=1.26",
]

[tool.uv]
package = false

[dependency-groups]
dev = []
